--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/ffmpeg"]
-	path = lib/ffmpeg
+	path = source/reorder_audio_streams_by_language_set_default/lib/ffmpeg
 	url = https://github.com/Josh5/unmanic.plugin.helpers.ffmpeg.git
