Remove check-audio-streams.sh from repository (internal use only)

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,8 @@ Thumbs.db
 # Local documentation
 CLAUDE.md
 
+# Internal scripts (not for distribution)
+check-audio-streams.sh
+
 # Build artifacts
 site-packages/
